# slack-events-bot

./: .all-contributorsrc  .dockerignore  .envrc.example  .gitignore  Dockerfile  LICENSE.md  README.md  app_manifest.yml  c4g-events.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-hub.yml
c4g/: bot.py  database.py  event.py
src/: auth.py  bot.py  config.py  database.py  error.py  event.py  message_builder.py  server.py
tests/: conftest.py  test_auth.py  test_bot.py  test_event.py  test_message_builder.py  test_server.py
tests/data/: events_api_response.json
tests/helpers/: __init__.py  utils.py
tests/mocks/: __init__.py  async_app.py  mock_response.py
