[project]
name = "slack-events-bot"
description = "An automated Slack bot to syndicate local events into Slack channels in a weekly digest format. Event data is sourced from HackGreenville Labs Events API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
version="0.1.0"
authors = [
  { name = "Olivia Sculley", email = "olivia@sculley.dev" },
]
keywords = [
  "automation",
  "black",
  "bolt",
  "bot",
  "pylint",
  "pytest",
  "slack"
]
dependencies = [
  "aiohttp",
  "aiosignal",
  "annotated-types",
  "anyio",
  "async-timeout",
  "attrs",
  "certifi",
  "charset-normalizer",
  "click",
  "fastapi",
  "frozenlist",
  "h11",
  "httpcore",
  "httpx",
  "idna",
  "iniconfig",
  "multidict",
  "packaging",
  "pluggy",
  "pydantic",
  "pydantic_core",
  "pytest",
  "python-dateutil",
  "pytz",
  "six",
  "slack-bolt",
  "slack-sdk",
  "sniffio",
  "starlette",
  "typing_extensions",
  "uvicorn",
  "yarl"
]

[project.urls]
Homepage = "https://github.com/hackgvl/slack-events-bot"
Documentation = "https://github.com/hackgvl/slack-events-bot/blob/dev/README.md"
Repository = "https://github.com/hackgvl/slack-events-bot.git"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
