[project]
name = "slack-events-bot"
description = "An automated Slack bot to syndicate local events into Slack channels in a weekly digest format. Event data is sourced from HackGreenville Labs Events API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
version="0.1.0"
authors = [
  { name = "Olivia Sculley", email = "olivia@sculley.dev" },
]
keywords = [
  "automation",
  "black",
  "bolt",
  "bot",
  "pylint",
  "pytest",
  "slack"
]
dependencies = [
  "aiohttp==3.8.5",
  "fastapi==0.103.2",
  "python_dateutil==2.8.2",
  "pytz==2023.3",
  "slack_bolt==1.18.0",
  "uvicorn==0.23.2"
]

[project.optional-dependencies]
test = [
    "black==23.9.1",
    "httpx==0.25.0",
    "pylint==2.17.5",
    "pytest==7.4.2"
]

[project.urls]
Homepage = "https://github.com/hackgvl/slack-events-bot"
Documentation = "https://github.com/hackgvl/slack-events-bot/blob/dev/README.md"
Repository = "https://github.com/hackgvl/slack-events-bot.git"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
